<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBtnSearchClick"
        app:layout_constraintBottom_toTopOf="@+id/divHor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtSearch"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <View
        android:id="@+id/divHor1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch"
        tools:layout_editor_absoluteX="3dp" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cityLabel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCity"
        app:layout_constraintEnd_toStartOf="@+id/txtCity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblCity"
        app:layout_constraintTop_toBottomOf="@+id/divHor1" />

    <TextView
        android:id="@+id/lblCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/countryLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtCountry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCity" />

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblCountry"
        app:layout_constraintStart_toEndOf="@+id/lblCountry" />

    <View
        android:id="@+id/divHor2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/lblCountry"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/lblTemeperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/temperatureLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divHor2" />

    <TextView
        android:id="@+id/txtTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblTemeperature"
        app:layout_constraintTop_toBottomOf="@+id/divHor2" />

    <TextView
        android:id="@+id/lblPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pressureLabel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPressure"
        app:layout_constraintEnd_toStartOf="@+id/txtPressure"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lblPressure"
        app:layout_constraintTop_toBottomOf="@+id/txtTemperature" />

    <TextView
        android:id="@+id/lblHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/humidityLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtHumidity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPressure" />

    <TextView
        android:id="@+id/txtHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblHumidity"
        app:layout_constraintStart_toEndOf="@+id/lblHumidity" />

</androidx.constraintlayout.widget.ConstraintLayout>